# ems

./: .gitignore  builmirai.service  builmirai_mpc_hvac_dashboard.html  install-windows-service.ps1  main.py  pyproject.toml  start.bat  start.ps1  start.sh
api/: main.py  models.py
docs/: architecture.md
docs/superpowers/plans/: 2026-05-22-builmirai-energyplus-backend.md  2026-06-22-langgraph-bms-agents.md
docs/superpowers/specs/: 2026-05-22-builmirai-energyplus-design.md  2026-06-22-langgraph-bms-design.md
simulation/: battery.py  build_idf.py  building.idf  engine.py  graph.py  llm_provider.py  mpc.py  state.py  weather.epw
tests/: test_api.py  test_battery.py  test_engine.py  test_graph.py  test_models.py  test_mpc.py  test_state.py
