[project]
name = "demo-project"
version = "0.1.0"
description = "BuilMirai MPC HVAC Dashboard with EnergyPlus backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
