[project]
name = "demo-project"
version = "0.1.0"
description = "BuilMirai MPC HVAC Dashboard with EnergyPlus backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "langchain>=1.3.6",
  "langgraph>=1.2.4",
  "langchain-groq>=1.1.3",
  "langchain-tavily>=0.2.18",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
